pagina inicio al 90% completado

--- a/index.html
+++ b/index.html
@@ -8,9 +8,49 @@
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
+
+    <link rel="stylesheet"
+  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <!-- https://www.youtube.com/watch?v=Xiw-JTvfj84&ab_channel=TahmidAhmed -->
-    <!-- https://www.youtube.com/watch?v=mkh3M2f_734&ab_channel=DaftCreation -->
+
+    <header>
+        <a href="#" class="logo"><img src="img/logo.png" alt=""></a>
+        <div class="bx bx-menu" id="menu-icon"></div>
+
+        <ul class="navlist"> 
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="#">Trainings</a></li>
+            <li><a href="#">classes</a></li>
+            <li><a href="#">Shows</a></li>
+            <li><a href="#">Shortcodes</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </header>
+
+    <section class="main">
+        <div class="main-text">
+            <h1>Dance to the beat</h1>
+            <button type="button">Our Service</button>
+        </div>
+    </section>
+
+    <div class="left">
+        <img src="img/arrow.png">
+    </div>
+
+    <div class="right">
+        <img src="img/arrow.png">
+    </div>
+
+    <!----link to js--->
+    <script type="text/javas.cript" src="js/script.js"></script>
+    
+
 </body>
 </html>
